# i-am-atomic

./: .clang-format  CMakeLists.txt  README.md
src/: false_sharing.h  queue_storage.h  spsc.h
test/: spsc_fifo_test.cpp  spsc_int_test.cpp  spsc_void_test.cpp
